selenium main project

--- a/7rmart/test-output/old/Default suite/methods-alphabetical.html
+++ b/7rmart/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8174ba">  <td>25/01/15 17:19:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.ManageNewsTest@62150f9e]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@132577100</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>25/01/15 17:19:01</td>   <td>-8265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:TestScript.ManageNewsTest@62150f9e]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@132577100</td>   <td></td> </tr>
-<tr bgcolor="7d9dab">  <td>25/01/15 17:19:05</td>   <td>-4432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageNewsTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.ManageNewsTest@62150f9e]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
-  <td>main@132577100</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.ManageContactText@62379589]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.ManageContactText@62379589]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.ManageContactText@62379589]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:53</td>   <td>-2015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:TestScript.ManageContactText@62379589]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:53</td>   <td>-2015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:TestScript.ManageContactText@62379589]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="ae9bb5">  <td>25/01/17 10:50:53</td>   <td>-2015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:TestScript.ManageContactText@62379589]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="df84b8">  <td>25/01/17 10:50:55</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContactText.verifyTheUserIsAbleToUpdateTheContactInformation()[pri:0, instance:TestScript.ManageContactText@62379589]">verifyTheUserIsAbleToUpdateTheContactInformation</td> 
+  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="df84b8">  <td>25/01/17 10:50:55</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContactText.verifyTheUserIsAbleToUpdateTheContactInformation()[pri:0, instance:TestScript.ManageContactText@62379589]">verifyTheUserIsAbleToUpdateTheContactInformation</td> 
+  <td>main@1781241150</td>   <td></td> </tr>
+<tr bgcolor="df84b8">  <td>25/01/17 10:50:55</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContactText.verifyTheUserIsAbleToUpdateTheContactInformation()[pri:0, instance:TestScript.ManageContactText@62379589]">verifyTheUserIsAbleToUpdateTheContactInformation</td> 
+  <td>main@1781241150</td>   <td></td> </tr>
 </table>
