--- a/7rmart/test-output/old/crossbrowser testing/classes.html
+++ b/7rmart/test-output/old/crossbrowser testing/classes.html
@@ -19,12 +19,13 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
+<td>verifyTheUserIsAbleToLoginIncorrectUsername</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginIncorrectUsername</td>
-<td>&nbsp;</td></tr>
+<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
+<td>regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
