--- a/7rmart/test-output/old/multibrowser testing/classes.html
+++ b/7rmart/test-output/old/multibrowser testing/classes.html
@@ -20,7 +20,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
-<td>&nbsp;</td></tr>
+<td>regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyTheUserIsAbleToLoginIncorrectUsername</td>
