--- a/7rmart/test-output/old/Default suite/classes.html
+++ b/7rmart/test-output/old/Default suite/classes.html
@@ -4,14 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestScript.ManageNewsTest</td>
+<td>TestScript.ManageContactText</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
+<td>verifyTheUserIsAbleToUpdateTheContactInformation</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyTheUpdateButtonIsDisplyedSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
