--- a/7rmart/test-output/old/Default suite/methods-not-run.html
+++ b/7rmart/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestScript.ManageContactText.verifyTheUpdateButtonIsDisplyedSuccessfully</td></tr>
 </table>
