--- a/7rmart/test-output/old/Suite/classes.html
+++ b/7rmart/test-output/old/Suite/classes.html
@@ -4,27 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestScript.LoginTest</td>
+<td>TestScript.ManageNewsTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginWithIncorrectUsernameAndPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginWithIncorrectPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyTheUserIsAbleToLoginIncorrectUsername</td>
-<td>&nbsp;</td></tr>
+<td>verifyTheUserIsAbleToAddTheNews</td>
+<td>regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
