--- a/7rmart/test-output/old/Suite/methods-alphabetical.html
+++ b/7rmart/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9da87b">  <td>25/01/03 21:29:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@52719fb6]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>25/01/03 21:29:06</td>   <td>-3706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:TestScript.LoginTest@52719fb6]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="a6fb96">  <td>25/01/03 21:29:09</td>   <td>-572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginWithIncorrectPassword(java.lang.String,java.lang.String)[pri:0, instance:TestScript.LoginTest@52719fb6]">verifyTheUserIsAbleToLoginWithIncorrectPassword</td> 
-  <td>main@1937962514</td>   <td></td> </tr>
+<tr bgcolor="737b89">  <td>25/01/17 11:10:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.ManageNewsTest@3e0e1046]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@596706728</td>   <td></td> </tr>
+<tr bgcolor="737b89">  <td>25/01/17 11:09:59</td>   <td>-7454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.ManageNewsTest@3e0e1046]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@596706728</td>   <td></td> </tr>
+<tr bgcolor="afa3c9">  <td>25/01/17 11:10:03</td>   <td>-3856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageNewsTest.verifyTheUserIsAbleToAddTheNews()[pri:0, instance:TestScript.ManageNewsTest@3e0e1046]">verifyTheUserIsAbleToAddTheNews</td> 
+  <td>main@596706728</td>   <td></td> </tr>
 </table>
