--- a/7rmart/test-output/old/crossbrowser testing/methods-alphabetical.html
+++ b/7rmart/test-output/old/crossbrowser testing/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>crossbrowser testing</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:34:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@1033576a]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:34:51</td>   <td>9315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@97e93f1]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:34:34</td>   <td>-8214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@1033576a]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:34:43</td>   <td>1058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@97e93f1]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="9499f1">  <td>25/01/08 20:34:38</td>   <td>-3733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@1033576a]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
-  <td>main@271095942</td>   <td></td> </tr>
-<tr bgcolor="9499f1">  <td>25/01/08 20:34:50</td>   <td>8312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@97e93f1]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
-  <td>main@271095942</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/17 11:09:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@700fb871]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@775081157</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/17 11:09:41</td>   <td>7521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@3cce57c7]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@775081157</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/17 11:09:28</td>   <td>-5652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@700fb871]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@775081157</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/17 11:09:35</td>   <td>991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@3cce57c7]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@775081157</td>   <td></td> </tr>
+<tr bgcolor="dab4eb">  <td>25/01/17 11:09:32</td>   <td>-2296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@700fb871]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>main@775081157</td>   <td></td> </tr>
+<tr bgcolor="dab4eb">  <td>25/01/17 11:09:41</td>   <td>6822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@3cce57c7]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>main@775081157</td>   <td></td> </tr>
 </table>
