--- a/7rmart/test-output/old/multibrowser testing/methods.html
+++ b/7rmart/test-output/old/multibrowser testing/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>multibrowser testing</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:47:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@1033576a]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1324623565</td>   <td></td> </tr>
-<tr bgcolor="9499f1">  <td>25/01/08 20:47:41</td>   <td>-3953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@1033576a]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
-  <td>TestNG-tests-1@1324623565</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:47:35</td>   <td>-10069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@1033576a]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1324623565</td>   <td></td> </tr>
-<tr bgcolor="9499f1">  <td>25/01/08 20:47:45</td>   <td>-178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@97e93f1]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
-  <td>TestNG-tests-2@1669239754</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:47:35</td>   <td>-10069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@97e93f1]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1669239754</td>   <td></td> </tr>
-<tr bgcolor="aba8be">  <td>25/01/08 20:47:46</td>   <td>1158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@97e93f1]">&lt;&lt;browserQuit</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1669239754</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/16 21:42:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@700fb871]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@351417028</td>   <td></td> </tr>
+<tr bgcolor="dab4eb">  <td>25/01/16 21:42:41</td>   <td>-2517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@700fb871]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>TestNG-tests-1@351417028</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/16 21:42:38</td>   <td>-5280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@700fb871]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@351417028</td>   <td></td> </tr>
+<tr bgcolor="dab4eb">  <td>25/01/16 21:42:45</td>   <td>2034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:0, instance:TestScript.LoginTest@3cce57c7]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>TestNG-tests-2@154173878</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/16 21:42:46</td>   <td>2771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:TestScript.LoginTest@3cce57c7]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@154173878</td>   <td></td> </tr>
+<tr bgcolor="649a8f">  <td>25/01/16 21:42:38</td>   <td>-5280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser(java.lang.String)[pri:0, instance:TestScript.LoginTest@3cce57c7]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@154173878</td>   <td></td> </tr>
 </table>
